# blog.fidelramos.net

./: .envrc  .gitignore  AGENTS.md  README.md  deploy.sh  pyproject.toml  requirements.txt
nginx/: blog.fidelramos.net
src/: Makefile  pelicanconf.py  publishconf.py  tasks.py
src/content/cryptocurrency/: 2023-05-05_btc_bet.md  2023-05-05_btc_bet_es.md
src/content/pages/: 404.md  about.md  about_es.md  consultancy.md  projects.md  projects_es.md  subscribe.md  subscribe_es.md
src/content/personal/: 2024-01-01_new_years_resolutions.md  2024-01-01_new_years_resolutions_es.md  2025-01-04_new_years_resolutions.md  2025-01-04_new_years_resolutions_es.md  2025-07-17_resolutions_midyear_review.md  2025-07-17_resolutions_midyear_review_es.md  2026-01-08_new_years_resolutions.md  2026-01-08_new_years_resolutions_es.md
src/content/photography/: 2022-03-31_photography_workflow.md  2022-03-31_photography_workflow_es.md
src/content/software/: 2019-10-13_unlocking-a-luks-encrypted-partition-on-boot-with-a-usb-drive.md  2019-10-13_unlocking-a-luks-encrypted-partition-on-boot-with-a-usb-drive_es.md  2022-02-17_nextcloud_carddav_caldav_with_dns.md  2022-02-17_nextcloud_carddav_caldav_with_dns_es.md  2022-02-23_web_browser_addons.md  2022-02-23_web_browser_addons_es.md  2022-05-27_privacy_respecting_self_hosted_web_analytics.md  2022-05-27_privacy_respecting_self_hosted_web_analytics_es.md  2023-06-20_automating_python_code_quality.md  2023-11-09_switch_nginx_caddy_docker_compose.md  2023-11-09_switch_nginx_caddy_docker_compose_es.md  2023-12-07_migrating_to_fish_shell.md  (+23 more)
(+4 files in other folders)
