[project]
name = "blog-fidelramos-net"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "markdown-captions>=2.1.2",
    "pelican-copy-code>=0.1.0",
    "pelican-i18n-subsites>=1.0.0",
    "pelican-precompress[brotli,zstandard]>=2.4.0",
    "pelican-search>=1.0.2",
    "pelican-series>=3.1.1",
    "pelican-theme-reflex>=3.0.3",
    "pelican[markdown]>=4.11.0",
    "rtoml>=0.13.0",
]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = {
    pelican-copy-code = "0s"
}
